snapshot/vm_mc/Home_server_snapshot_game/state/iptables-current.txt
# Generated by iptables-save v1.8.10 on Wed Oct  7 20:07:19 2026
*nat
:PREROUTING ACCEPT [37867:2271312]
:INPUT ACCEPT [3:164]
:OUTPUT ACCEPT [3818:235531]
:POSTROUTING ACCEPT [3814:235371]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -o docker0 -m addrtype --src-type LOCAL -j MASQUERADE
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -o pterodactyl0 -m addrtype --src-type LOCAL -j MASQUERADE
-A POSTROUTING -s 172.18.0.0/16 ! -o pterodactyl0 -j MASQUERADE
COMMIT
# Completed on Wed Oct  7 20:07:19 2026
# Generated by iptables-save v1.8.10 on Wed Oct  7 20:07:19 2026
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:DOCKER - [0:0]
:DOCKER-BRIDGE - [0:0]
:DOCKER-CT - [0:0]
:DOCKER-FORWARD - [0:0]
:DOCKER-INTERNAL - [0:0]
:DOCKER-USER - [0:0]
:PJ-DKR - [0:0]
:PJ-IN - [0:0]
:PJ-OUT - [0:0]
-A INPUT -j PJ-IN
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-FORWARD
-A OUTPUT -j PJ-OUT
-A DOCKER ! -i pterodactyl0 -o pterodactyl0 -j DROP
-A DOCKER ! -i docker0 -o docker0 -j DROP
-A DOCKER-BRIDGE -o pterodactyl0 -j DOCKER
-A DOCKER-BRIDGE -o docker0 -j DOCKER
-A DOCKER-CT -o pterodactyl0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-FORWARD -j DOCKER-CT
-A DOCKER-FORWARD -j DOCKER-INTERNAL
-A DOCKER-FORWARD -j DOCKER-BRIDGE
-A DOCKER-FORWARD -i pterodactyl0 -j ACCEPT
-A DOCKER-FORWARD -i docker0 -j ACCEPT
-A DOCKER-USER -j PJ-DKR
-A PJ-DKR -m conntrack --ctstate INVALID -j DROP
-A PJ-DKR -m set --match-set cs-Home_server-v4 src -m limit --limit 10/min -j LOG --log-prefix "CS-BLOCK "
-A PJ-DKR -m set --match-set cs-Home_server-v4 src -j DROP
-A PJ-DKR -m conntrack --ctstate ESTABLISHED -j RETURN
-A PJ-DKR -p icmp -m icmp --icmp-type 3 -m conntrack --ctstate RELATED -j RETURN
-A PJ-DKR -p icmp -m icmp --icmp-type 11 -m conntrack --ctstate RELATED -j RETURN
-A PJ-DKR -i ens3 -p tcp -m conntrack --ctstate NEW --ctorigdst 192.168.4.10 --ctorigdstport 49150 -m hashlimit --hashlimit-above 1/sec --hashlimit-burst 30 --hashlimit-mode srcip --hashlimit-name mc_new --hashlimit-htable-expire 60000 -j DROP
-A PJ-DKR -i ens3 -p tcp -m conntrack --ctstate NEW --ctorigdst 192.168.4.10 --ctorigdstport 49150 -m connlimit --connlimit-above 50 --connlimit-mask 32 --connlimit-saddr -j DROP
-A PJ-DKR -i ens3 -p tcp -m conntrack --ctstate NEW --ctorigdst 192.168.4.10 --ctorigdstport 49150 -m limit --limit 10/min --limit-burst 20 -j LOG --log-prefix "MC-PUBLIC-NEW " --log-level 6
-A PJ-DKR -i ens3 -p tcp -m conntrack --ctstate NEW --ctorigdst 192.168.4.10 --ctorigdstport 49150 -j RETURN
-A PJ-DKR -s 192.168.5.10/32 -i ens3 -p tcp -m conntrack --ctstate NEW --ctorigdst 192.168.4.10 --ctorigdstport 9940 -j RETURN
-A PJ-DKR -i ens3 -m limit --limit 5/min --limit-burst 10 -j LOG --log-prefix "FW-DOCKER-IN "
-A PJ-DKR -i ens3 -j DROP
-A PJ-DKR -d 10.0.0.0/8 -m limit --limit 12/min -j LOG --log-prefix "PROTECTED-DKR "
-A PJ-DKR -d 10.0.0.0/8 -j DROP
-A PJ-DKR -d 172.16.0.0/12 -m limit --limit 12/min -j LOG --log-prefix "PROTECTED-DKR "
-A PJ-DKR -d 172.16.0.0/12 -j DROP
-A PJ-DKR -d 192.168.0.0/16 -m limit --limit 12/min -j LOG --log-prefix "PROTECTED-DKR "
-A PJ-DKR -d 192.168.0.0/16 -j DROP
-A PJ-DKR -d 100.64.0.0/10 -m limit --limit 12/min -j LOG --log-prefix "PROTECTED-DKR "
-A PJ-DKR -d 100.64.0.0/10 -j DROP
-A PJ-DKR -d 169.254.0.0/16 -m limit --limit 12/min -j LOG --log-prefix "PROTECTED-DKR "
-A PJ-DKR -d 169.254.0.0/16 -j DROP
-A PJ-DKR -d 192.168.1.0/24 -m limit --limit 12/min -j LOG --log-prefix "PROTECTED-DKR "
-A PJ-DKR -d 192.168.1.0/24 -j DROP
-A PJ-DKR -d 9.9.9.9/32 -o ens3 -p udp -m udp --dport 53 -j RETURN
-A PJ-DKR -d 9.9.9.9/32 -o ens3 -p tcp -m tcp --dport 53 -j RETURN
-A PJ-DKR -d 149.112.112.112/32 -o ens3 -p udp -m udp --dport 53 -j RETURN
-A PJ-DKR -d 149.112.112.112/32 -o ens3 -p tcp -m tcp --dport 53 -j RETURN
-A PJ-DKR -o ens3 -p tcp -m tcp --dport 80 -j RETURN
-A PJ-DKR -o ens3 -p tcp -m tcp --dport 443 -j RETURN
-A PJ-DKR -m limit --limit 5/min --limit-burst 10 -j LOG --log-prefix "FW-DOCKER-OUT "
-A PJ-DKR -j DROP
-A PJ-IN -i lo -j ACCEPT
-A PJ-IN -m conntrack --ctstate INVALID -j DROP
-A PJ-IN -m set --match-set cs-Home_server-v4 src -m limit --limit 10/min -j LOG --log-prefix "CS-BLOCK "
-A PJ-IN -m set --match-set cs-Home_server-v4 src -j DROP
-A PJ-IN -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A PJ-IN -s 10.10.10.2/32 -i ens3 -p tcp -m tcp --dport 22 -j ACCEPT
-A PJ-IN -s 192.168.2.100/32 -i ens3 -p tcp -m tcp --dport 22 -j ACCEPT
-A PJ-IN -s 10.10.10.4/32 -i ens3 -p tcp -m tcp --dport 22 -j ACCEPT
-A PJ-IN -s 10.10.10.2/32 -i ens3 -p tcp -m tcp --dport 2022 -j ACCEPT
-A PJ-IN -s 10.10.10.4/32 -i ens3 -p tcp -m tcp --dport 2022 -j ACCEPT
-A PJ-IN -s 10.10.10.3/32 -i ens3 -p tcp -m tcp --dport 2022 -j ACCEPT
-A PJ-IN -s 192.168.2.100/32 -i ens3 -p tcp -m tcp --dport 2022 -j ACCEPT
-A PJ-IN -s 192.168.5.10/32 -i ens3 -p tcp -m tcp --dport 8080 -j ACCEPT
-A PJ-IN -s 192.168.5.10/32 -i ens3 -p tcp -m tcp --dport 9100 -j ACCEPT
-A PJ-IN -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A PJ-IN -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A PJ-IN -m limit --limit 5/min --limit-burst 10 -j LOG --log-prefix "FW-SERVEUR-IN "
-A PJ-IN -j DROP
-A PJ-OUT -o lo -j ACCEPT
-A PJ-OUT -m conntrack --ctstate INVALID -j DROP
-A PJ-OUT -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A PJ-OUT -d 192.168.5.10/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A PJ-OUT -d 192.168.5.10/32 -p tcp -m tcp --dport 1514 -j ACCEPT
-A PJ-OUT -d 10.0.0.0/8 -m limit --limit 12/min -j LOG --log-prefix "PROTECTED-OUT "
-A PJ-OUT -d 10.0.0.0/8 -j DROP
-A PJ-OUT -d 172.16.0.0/12 -m limit --limit 12/min -j LOG --log-prefix "PROTECTED-OUT "
-A PJ-OUT -d 172.16.0.0/12 -j DROP
-A PJ-OUT -d 192.168.0.0/16 -m limit --limit 12/min -j LOG --log-prefix "PROTECTED-OUT "
-A PJ-OUT -d 192.168.0.0/16 -j DROP
-A PJ-OUT -d 100.64.0.0/10 -m limit --limit 12/min -j LOG --log-prefix "PROTECTED-OUT "
-A PJ-OUT -d 100.64.0.0/10 -j DROP
-A PJ-OUT -d 169.254.0.0/16 -m limit --limit 12/min -j LOG --log-prefix "PROTECTED-OUT "
-A PJ-OUT -d 169.254.0.0/16 -j DROP
-A PJ-OUT -d 192.168.1.0/24 -m limit --limit 12/min -j LOG --log-prefix "PROTECTED-OUT "
-A PJ-OUT -d 192.168.1.0/24 -j DROP
-A PJ-OUT -d 9.9.9.9/32 -p udp -m udp --dport 53 -j ACCEPT
-A PJ-OUT -d 9.9.9.9/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A PJ-OUT -d 149.112.112.112/32 -p udp -m udp --dport 53 -j ACCEPT
-A PJ-OUT -d 149.112.112.112/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A PJ-OUT -p udp -m udp --dport 123 -j ACCEPT
-A PJ-OUT -p tcp -m tcp --dport 80 -j ACCEPT
-A PJ-OUT -p tcp -m tcp --dport 443 -j ACCEPT
-A PJ-OUT -m limit --limit 5/min --limit-burst 10 -j LOG --log-prefix "FW-SERVEUR-OUT "
-A PJ-OUT -j DROP
COMMIT
# Completed on Wed Oct  7 20:07:19 2026
